--- a/assets/style.scss
+++ b/assets/style.scss
@@ -44,6 +44,11 @@ $col_width: 100vw / 6;
   background-size: $unit * 1.5 $unit * 1.5;
 }
 
+:root{
+  --bg:#efeeee;
+}
+
+
 html {
   scroll-behavior: smooth;
 }
@@ -58,6 +63,7 @@ body {
   font-family: tilt-neon;
   font-size: $font_body;
   line-height: $line_height;
+  background-color:var(--bg);
 }
 a {
   color: $black;
@@ -111,7 +117,7 @@ nav, section.subnav {
   z-index: 9999;
   height: $unit * 6;
   border-bottom: 1px solid;
-  background: #fff;
+  background: var(--bg);
   text-align: center;
   line-height: $unit * 6;
   h1 {
@@ -182,7 +188,7 @@ nav, section.subnav {
 }
 section {
   border-bottom: 1px solid;
-  background: #fff;
+  background: var(--bg);
 }
 section.subnav {
   position: static;
@@ -258,17 +264,18 @@ section.hero {
     pointer-events:none;
   }
   svg line {
-    stroke:#fff;
+    stroke:var(--bg);
     stroke-width:1;
   }
   svg circle {
-    fill: #fff;
+    fill: var(--bg);
   }
 }
 
 section.scroller {
   cursor:crosshair;
   --scroll:0;
+  --vrot:0;
   font-size: $unit * 27;
   line-height: $unit * 30;
   overflow-y: hidden;
@@ -416,7 +423,7 @@ section.signs {
     height: $col_width * 0.8;
     border-right: 1px solid;
     border-bottom: 1px solid;
-    background: #fff;
+    background: var(--bg);
     .inner {
       width: 100%;
       height: 100%;
@@ -1015,7 +1022,7 @@ section.signs {
       p {
         display: inline-block;
         background: $black;
-        color: #fff;
+        color: var(--bg);
         padding: 0.1em 0.3em;
         border-radius: 0.05em;
         letter-spacing: 0.01em;
@@ -1051,7 +1058,7 @@ section.information {
     min-height: $col_width * 2;
     border-right: 1px solid;
     padding: $unit $col_width $unit $unit*4;
-    background: #fff;
+    background: var(--bg);
     h2, p {
       max-width: $unit * 128;
     }
@@ -1066,7 +1073,7 @@ section.information {
     float:left;
     width: $col_width * 2;
     height: $col_width * 2;
-    background: #fff;
+    background: var(--bg);
     @include for-phone-only {
       width: $col_width * 6;
       height: $col_width * 6;
@@ -1202,7 +1209,7 @@ section.glyphs-table {
           &:hover {
             p {
               background-color: $black;
-              color: #fff;
+              color: var(--bg);
             }
           }
         }
@@ -1247,6 +1254,8 @@ section.tester {
   }
 
   .ibeam {
+    position:relative;
+    cursor:none;
     float:left;
     width: $unit * 15;
     border-right: 1px solid;
@@ -1258,6 +1267,9 @@ section.tester {
     }
 
     img{
+      position:absolute;
+      top:32px;
+      left:35px;
       width:50px;
     }
   }
@@ -1301,7 +1313,7 @@ section.tester {
           -webkit-appearance: none;
           height: $unit * 2 - 1;
           width: $unit * 2 - 1;
-          background: #fff;
+          background: var(--bg);
           margin-top: - ($unit - 1);
           border: 1px solid;
           border-radius: 50%;
@@ -1309,7 +1321,7 @@ section.tester {
         &::-moz-range-thumb {
           height: $unit * 2;
           width: $unit * 2;
-          background: #fff;
+          background: var(--bg);
           margin-top: - ($unit + 1);
           border: 1px solid;
           border-radius: 50%;
@@ -1335,6 +1347,14 @@ section.tester {
       }
     }
   }
+}
+
+section.tester.custom-hover .ibeam .moving{
+  position: absolute;
+  top: var(--cursor-y);
+  left: var(--cursor-x);
+  pointer-events: none;
+  transform: translate(-50%, -50%);
 }
 
 section.footer {
@@ -1422,16 +1442,4 @@ div.separator {
   height: $unit * 12;
   border-bottom: 1px solid;
   @include polka_dot;
-}
-
-
-@media(hover:hover){
-
-  section.tester:hover .ibeam img{
-    position: absolute;
-    top: var(--cursor-y);
-    left: var(--cursor-x);
-    pointer-events: none;
-    transform: translate(-50%, -50%);
-  }
 }
