initial tests of animation

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -1268,9 +1268,10 @@ section.tester {
 
     img{
       position:absolute;
-      top:32px;
-      left:35px;
+      top:119px;
+      left:60px;
       width:50px;
+      transform: translate(-50%, -50%);
     }
   }
   .text {
@@ -1349,13 +1350,13 @@ section.tester {
   }
 }
 
-section.tester.custom-hover .ibeam .moving{
-  position: absolute;
-  top: var(--cursor-y);
-  left: var(--cursor-x);
-  pointer-events: none;
-  transform: translate(-50%, -50%);
-}
+// section.tester.custom-hover .ibeam .moving{
+//   position: absolute;
+//   top: var(--cursor-y);
+//   left: var(--cursor-x);
+//   pointer-events: none;
+//   transform: translate(-50%, -50%);
+// }
 
 section.footer {
   .text {
