--- a/assets/style.css
+++ b/assets/style.css
@@ -1348,8 +1348,8 @@ section.tester input[type=text] {
 }
 section.tester .ibeam {
   position: relative;
-  cursor: none;
   float: left;
+  cursor: none;
   width: 120px;
   border-right: 1px solid;
   height: 240px;
@@ -1362,11 +1362,15 @@ section.tester .ibeam {
   }
 }
 section.tester .ibeam img {
+  pointer-events: none;
   position: absolute;
   top: 119px;
   left: 60px;
   width: 50px;
   transform: translate(-50%, -50%);
+}
+section.tester .ibeam .static {
+  opacity: 0.2;
 }
 section.tester .text {
   float: left;
