--- a/assets/style.css
+++ b/assets/style.css
@@ -524,7 +524,7 @@ section.signs .prosperity {
   height: 13.3333333333vw;
   border-right: 1px solid;
   border-bottom: 1px solid;
-  background: var(--bg);
+  background-color: var(--bg);
 }
 section.signs .prosperity .inner {
   width: 100%;
@@ -1386,6 +1386,7 @@ section.tester {
   --v-rot:0;
 }
 section.tester input[type=text] {
+  background-color: transparent;
   cursor: default;
 }
 section.tester .ibeam {
@@ -1447,7 +1448,7 @@ section.tester .text .slider-wrapper .slider {
 section.tester .text .slider-wrapper .slider:focus {
   outline: none;
 }
-section.tester .text .slider-wrapper .slider::-webkit-slider-runnable-track, section.tester .text .slider-wrapper .slider::-webkit-slider-runnable-track, section.tester .text .slider-wrapper .slider::-moz-range-track {
+section.tester .text .slider-wrapper .slider::-webkit-slider-runnable-track, section.tester .text .slider-wrapper .slider::-webkit-slider-runnable-track {
   background: #000;
   height: 1px;
 }
