--- a/assets/style.scss
+++ b/assets/style.scss
@@ -505,7 +505,7 @@ section.signs {
     height: $col_width * 0.8;
     border-right: 1px solid;
     border-bottom: 1px solid;
-    background: var(--bg);
+    background-color: var(--bg);
     .inner {
       width: 100%;
       height: 100%;
@@ -1332,6 +1332,7 @@ section.tester {
   // position:relative;
 
   input[type="text"]{
+    background-color: transparent;
     cursor:default;
   }
 
@@ -1393,7 +1394,8 @@ section.tester {
         &:focus{
           outline: none;
         }
-        &::-webkit-slider-runnable-track, &::-webkit-slider-runnable-track,&::-moz-range-track {
+        // adding &::-moz-range-track breaks chrome, but not having it breaks firefox?
+        &::-webkit-slider-runnable-track, &::-webkit-slider-runnable-track{
           background: $black;
           height: 1px;
         }
@@ -1451,6 +1453,8 @@ section.tester.exact-track{
 //   pointer-events: none;
 //   transform: translate(-50%, -50%);
 // }
+
+
 
 section.footer {
   .text {
