--- a/assets/style.css
+++ b/assets/style.css
@@ -120,6 +120,10 @@ h2 {
   text-transform: uppercase;
 }
 
+h1, h2:not(.big) {
+  letter-spacing: 0.25em;
+}
+
 p {
   margin: 24px 0;
 }
@@ -276,13 +280,20 @@ section.hero {
 }
 @media (max-width: 599px) {
   section.hero {
-    padding-top: calc(48px + 0.05em);
-    font-size: 75vw;
-    line-height: 0.75em;
+    height: min(150vw, 600px);
+    padding-top: calc(60px + 0.05em);
+    font-size: min(70vw, 300px);
+    line-height: 0.8em;
   }
   section.hero .chars {
     display: inline-block;
     letter-spacing: -0.03em;
+  }
+  section.hero .char-2 {
+    display: block;
+  }
+  section.hero svg {
+    display: none;
   }
 }
 section.hero .char-0 {
@@ -373,6 +384,7 @@ section.scroller {
 }
 
 .hero-text {
+  height: 100%;
   white-space: nowrap;
 }
 
@@ -833,85 +845,197 @@ section.signs .bowery-savings p.bowery .arc-1 {
   top: 62%;
   transform: rotate(-86.24deg);
 }
+@media (max-width: 599px) {
+  section.signs .bowery-savings p.bowery .arc-1 {
+    left: 18vw;
+    top: 53vw;
+    transform: rotate(-92.96deg);
+  }
+}
 section.signs .bowery-savings p.bowery .arc-2 {
   left: 5.3041666667%;
   top: 53.46%;
   transform: rotate(-77.67deg);
+}
+@media (max-width: 599px) {
+  section.signs .bowery-savings p.bowery .arc-2 {
+    left: 11vw;
+    top: 45vw;
+    transform: rotate(-81.29deg);
+  }
 }
 section.signs .bowery-savings p.bowery .arc-3 {
   left: 3.3194444444%;
   top: 45.16%;
   transform: rotate(-69deg);
 }
+@media (max-width: 599px) {
+  section.signs .bowery-savings p.bowery .arc-3 {
+    left: 6vw;
+    top: 37vw;
+    transform: rotate(-69.4deg);
+  }
+}
 section.signs .bowery-savings p.bowery .arc-4 {
   left: 2.4354166667%;
   top: 35.06%;
   transform: rotate(-57.74deg);
+}
+@media (max-width: 599px) {
+  section.signs .bowery-savings p.bowery .arc-4 {
+    left: 4vw;
+    top: 28vw;
+    transform: rotate(-54.01deg);
+  }
 }
 section.signs .bowery-savings p.bowery .arc-5 {
   left: 1.2881944444%;
   top: 27.68%;
   transform: rotate(-49.16deg);
 }
+@media (max-width: 599px) {
+  section.signs .bowery-savings p.bowery .arc-5 {
+    left: 2vw;
+    top: 22vw;
+    transform: rotate(-41.51deg);
+  }
+}
 section.signs .bowery-savings p.bowery .arc-6 {
   left: 0.0743055556%;
   top: 20.54%;
   transform: rotate(-38.54deg);
+}
+@media (max-width: 599px) {
+  section.signs .bowery-savings p.bowery .arc-6 {
+    left: 0;
+    top: 17vw;
+    transform: rotate(-25.89deg);
+  }
 }
 section.signs .bowery-savings p.bowery .arc-7 {
   left: -0.5%;
   top: 15.12%;
   transform: rotate(-28.67deg);
 }
+@media (max-width: 599px) {
+  section.signs .bowery-savings p.bowery .arc-7 {
+    left: -0.5vw;
+    top: 14vw;
+    transform: rotate(-12deg);
+  }
+}
 section.signs .bowery-savings p.bowery .arc-8 {
   left: -0.6770833333%;
   top: 11.65%;
   transform: rotate(-20.78deg);
+}
+@media (max-width: 599px) {
+  section.signs .bowery-savings p.bowery .arc-8 {
+    left: 0;
+    top: 13vw;
+    transform: rotate(-0.75deg);
+  }
 }
 section.signs .bowery-savings p.bowery .arc-9 {
   left: -1.0479166667%;
   top: 9.44%;
   transform: rotate(-12.55deg);
 }
+@media (max-width: 599px) {
+  section.signs .bowery-savings p.bowery .arc-9 {
+    left: 0;
+    top: 13.8vw;
+    transform: rotate(11.11deg);
+  }
+}
 section.signs .bowery-savings p.bowery .arc-10 {
   left: 0.0652777778%;
   top: 8.06%;
   transform: rotate(-1.55deg);
+}
+@media (max-width: 599px) {
+  section.signs .bowery-savings p.bowery .arc-10 {
+    left: 1.5vw;
+    top: 17vw;
+    transform: rotate(26.55deg);
+  }
 }
 section.signs .bowery-savings p.bowery .arc-11 {
   left: 0.1215277778%;
   top: 8.43%;
   transform: rotate(6.18deg);
 }
+@media (max-width: 599px) {
+  section.signs .bowery-savings p.bowery .arc-11 {
+    left: 1vw;
+    top: 21.5vw;
+    transform: rotate(38.07deg);
+  }
+}
 section.signs .bowery-savings p.bowery .arc-12 {
   left: -0.2423611111%;
   top: 9.88%;
   transform: rotate(14.51deg);
+}
+@media (max-width: 599px) {
+  section.signs .bowery-savings p.bowery .arc-12 {
+    left: -1vw;
+    top: 27vw;
+    transform: rotate(50.58deg);
+  }
 }
 section.signs .bowery-savings p.bowery .arc-13 {
   left: -0.3055555556%;
   top: 11.93%;
   transform: rotate(21.21deg);
 }
+@media (max-width: 599px) {
+  section.signs .bowery-savings p.bowery .arc-13 {
+    left: -3vw;
+    top: 32vw;
+    transform: rotate(59.85deg);
+  }
+}
 section.signs .bowery-savings p.bowery .arc-14 {
   left: -0.4534722222%;
   top: 14.89%;
   transform: rotate(28.25deg);
+}
+@media (max-width: 599px) {
+  section.signs .bowery-savings p.bowery .arc-14 {
+    left: -6vw;
+    top: 39vw;
+    transform: rotate(69.49deg);
+  }
 }
 section.signs .bowery-savings p.bowery .arc-15 {
   left: -0.9055555556%;
   top: 19.93%;
   transform: rotate(37.71deg);
 }
+@media (max-width: 599px) {
+  section.signs .bowery-savings p.bowery .arc-15 {
+    left: -11.8vw;
+    top: 47vw;
+    transform: rotate(82.62deg);
+  }
+}
 section.signs .bowery-savings p.bowery .arc-16 {
   left: -1.4715277778%;
   top: 25.66%;
   transform: rotate(46.04deg);
 }
+@media (max-width: 599px) {
+  section.signs .bowery-savings p.bowery .arc-16 {
+    left: -18.5vw;
+    top: 55vw;
+    transform: rotate(94.11deg);
+  }
+}
 section.signs .bowery-savings p.bowery .arc-17 {
   left: -1.6763888889%;
   top: 34.44%;
-  transform: rotate(57.11deg);
+  transform: rotate(94.11deg);
 }
 section.signs .bowery-savings p.bowery .arc-18 {
   left: -3.0875%;
@@ -927,6 +1051,11 @@ section.signs .bowery-savings p.bowery .arc-20 {
   left: -7.5618055556%;
   top: 60.41%;
   transform: rotate(84.7deg);
+}
+@media (max-width: 599px) {
+  section.signs .bowery-savings p.bowery .arc-17, section.signs .bowery-savings p.bowery .arc-18, section.signs .bowery-savings p.bowery .arc-19, section.signs .bowery-savings p.bowery .arc-20 {
+    display: none;
+  }
 }
 section.signs .bowery-savings .inner p.save {
   line-height: 0.9em;
@@ -1517,21 +1646,53 @@ section.tester.exact-track input[type=text], section.tester.exact-track .ibeam {
   }
 }
 
-section.footer .text {
-  float: left;
-  width: 50vw;
-  padding: 0 0 24px 32px;
+#tilt-control-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: none;
+  z-index: 200;
+  pointer-events: none;
 }
-section.footer .text h2 {
+@media (hover: none) {
+  #tilt-control-wrapper {
+    display: block;
+  }
+}
+
+#tilt-control {
+  touch-action: none;
+  pointer-events: all;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  background-color: white;
+  border: 1px solid black;
+  box-shadow: 5px 5px 14px 0px rgba(0, 0, 0, 0.47);
+}
+
+h2.big {
   font-size: 36px;
   line-height: 42px;
   text-transform: none;
   margin: 42px 0;
 }
 @media (max-width: 599px) {
-  section.footer .text h2 {
+  h2.big {
     margin: 24px 0;
   }
+}
+
+section.footer .text {
+  float: left;
+  width: 50vw;
+  padding: 0 0 24px 32px;
 }
 @media (max-width: 599px) {
   section.footer .text {
@@ -1542,12 +1703,15 @@ section.footer .text h2 {
 section.footer .credit {
   float: right;
   width: 33.3333333333vw;
+  position: sticky;
+  top: 20px;
 }
 @media (max-width: 599px) {
   section.footer .credit {
     float: left;
     width: 100vw;
     border-top: 1px solid;
+    position: relative;
   }
 }
 section.footer .credit .google {
@@ -1603,7 +1767,8 @@ section.footer .credit .fineprint p {
 @media (max-width: 599px) {
   section.footer .credit .fineprint {
     width: 100vw;
-    padding: 16.6666666667vw 24px 0;
+    padding: 5vw 24px 0;
+    padding-bottom: 40px;
   }
 }
 
