--- a/assets/style.scss
+++ b/assets/style.scss
@@ -81,6 +81,10 @@ h2 {
   margin: $line_height 0;
   text-transform: uppercase;
 }
+
+h1,h2:not(.big){
+  letter-spacing:0.25em;
+}
 p {
   margin: $line_height 0;
 }
@@ -223,12 +227,21 @@ section.hero {
                                 supported by Chrome, Opera and Firefox */
   word-break: keep-all;
   @include for-phone-only {
-    padding-top: calc(48px + 0.05em);
-    font-size: 75vw;
-    line-height: 0.75em;
+    height:min(150vw,600px);
+    padding-top: calc(60px + 0.05em);
+    font-size: min(70vw,300px);
+    line-height: 0.8em;
     .chars {
       display: inline-block;
       letter-spacing: -0.03em;
+    }
+
+    .char-2{
+      display:block;
+    }
+
+    svg{
+      display:none;
     }
   }
 
@@ -369,8 +382,12 @@ section.scroller {
 
 
 .hero-text{
+  height: 100%;
+  // padding-bottom:20px;
   white-space: nowrap;
 }
+
+
 
 
 section.signs {
@@ -816,75 +833,135 @@ section.signs {
         left: 111.11px / $wrapperW * 100%; top: 62%;
         transform: rotate(-86.24deg);
         @include for-phone-only{
-
+          left: 18vw; top: 53vw;
+          transform: rotate(-92.96deg);
         }
 
       }
       .arc-2 {
         left: 76.38px / $wrapperW * 100%; top: 53.46%;
         transform: rotate(-77.67deg);
+        @include for-phone-only{
+          left: 11vw; top: 45vw;
+          transform: rotate(-81.29deg);
+        }
       }
       .arc-3 {
         left: 47.8px / $wrapperW * 100%; top: 45.16%;
         transform: rotate(-69deg);
+        @include for-phone-only{
+          left: 6vw; top: 37vw;
+          transform: rotate(-69.4deg);
+        }
       }
       .arc-4 {
         left: 35.07px / $wrapperW * 100%; top: 35.06%;
         transform: rotate(-57.74deg);
+        @include for-phone-only{
+          left: 4vw; top: 28vw;
+          transform: rotate(-54.01deg);
+        }
       }
       .arc-5 {
         left: 18.55px / $wrapperW * 100%; top: 27.68%;
         transform: rotate(-49.16deg);
-
+        @include for-phone-only{
+          left: 2vw; top: 22vw;
+          transform:rotate(-41.51deg);
+        }
 
       }
       .arc-6 {
         left: 1.07px / $wrapperW * 100%; top: 20.54%;
         transform: rotate(-38.54deg);
+        @include for-phone-only{
+          left:0; top:17vw;
+          transform:rotate(-25.89deg);
+        }
       }
       .arc-7 {
         left: -7.2px / $wrapperW * 100%; top: 15.12%;
         transform: rotate(-28.67deg);
+        @include for-phone-only{
+          left:-0.5vw; top:14vw;
+          transform:rotate(-12deg);
+        }
       }
       .arc-8 {
         left: -9.75px / $wrapperW * 100%; top: 11.65%;
         transform: rotate(-20.78deg);
+        @include for-phone-only{
+          left:0; top: 13vw;
+          transform:rotate(-0.75deg);
+        }
       }
       .arc-9 {
         left: -15.09px / $wrapperW * 100%; top: 9.44%;
         transform: rotate(-12.55deg);
+        @include for-phone-only{
+          left:0; top:13.8vw;
+          transform:rotate(11.11deg);
+        }
       }
       .arc-10 {
         left: 0.94px / $wrapperW * 100%; top: 8.06%;
         transform: rotate(-1.55deg);
+        @include for-phone-only{
+          left: 1.5vw; top: 17vw;
+          transform:rotate(26.55deg);
+        }
       }
       .arc-11 {
         left: 1.75px / $wrapperW * 100%; top: 8.43%;
         transform: rotate(6.18deg);
+        @include for-phone-only{
+          left: 1vw; top: 21.5vw;
+          transform:rotate(38.07deg);
+        }
       }
       .arc-12 {
         left: -3.49px / $wrapperW * 100%; top: 9.88%;
         transform: rotate(14.51deg);
+        @include for-phone-only{
+          left: -1vw; top: 27vw;
+          transform:rotate(50.58deg);
+        }
       }
       .arc-13 {
         left: -4.4px / $wrapperW * 100%; top: 11.93%;
         transform: rotate(21.21deg);
+        @include for-phone-only{
+          left: -3vw; top: 32vw;
+          transform:rotate(59.85deg);
+        }
       }
       .arc-14 {
         left: -6.53px / $wrapperW * 100%; top: 14.89%;
         transform: rotate(28.25deg);
+        @include for-phone-only{
+          left: -6vw; top: 39vw;
+          transform:rotate(69.49deg);
+        }
       }
       .arc-15 {
         left: -13.04px / $wrapperW * 100%; top: 19.93%;
         transform: rotate(37.71deg);
+        @include for-phone-only{
+          left: -11.8vw; top: 47vw;
+          transform:rotate(82.62deg);
+        }
       }
       .arc-16 {
         left: -21.19px / $wrapperW * 100%; top: 25.66%;
         transform: rotate(46.04deg);
+        @include for-phone-only{
+          left: -18.5vw; top: 55vw;
+          transform: rotate(94.11deg);
+        }
       }
       .arc-17 {
         left: -24.14px / $wrapperW * 100%; top: 34.44%;
-        transform: rotate(57.11deg);
+        transform: rotate(94.11deg);
       }
       .arc-18 {
         left: -44.46px / $wrapperW * 100%; top: 42.16%;
@@ -897,6 +974,12 @@ section.signs {
       .arc-20 {
         left: -108.89px / $wrapperW * 100%; top: 60.41%;
         transform: rotate(84.7deg);
+      }
+
+      .arc-17,.arc-18,.arc-19,.arc-20{
+        @include for-phone-only{
+          display:none;
+        }
       }
     }
     .inner {
@@ -1500,6 +1583,41 @@ section.tester.exact-track{
 
 
 
+#tilt-control-wrapper{
+  position:fixed;
+  top:0;
+  left:0;
+  width:100vw;
+  height:100vh;
+  display:none;
+  z-index:200;
+  pointer-events:none;
+
+  @media(hover:none){
+    display:block;
+    // background-color: red;
+  }
+
+
+}
+
+#tilt-control{
+  touch-action: none;
+  pointer-events:all;
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%);
+  width:48px;
+  height:48px;
+  border-radius:50%;
+  background-color: white;
+  border:1px solid black;
+  box-shadow: 5px 5px 14px 0px rgba(0, 0, 0, 0.47);
+}
+
+
+
 
 // section.tester.custom-hover .ibeam .moving{
 //   position: absolute;
@@ -1509,22 +1627,22 @@ section.tester.exact-track{
 //   transform: translate(-50%, -50%);
 // }
 
-
+h2.big {
+  font-size: 36px;
+  line-height: $line_height * 1.75;
+  text-transform: none;
+  margin:  $line_height * 1.75 0;
+  @include for-phone-only {
+    margin:  $line_height 0;
+  }
+}
 
 section.footer {
   .text {
     float:left;
     width: $col_width * 3;
     padding: 0 0 $unit * 3 $unit * 4;
-    h2 {
-      font-size: 36px;
-      line-height: $line_height * 1.75;
-      text-transform: none;
-      margin:  $line_height * 1.75 0;
-      @include for-phone-only {
-        margin:  $line_height 0;
-      }
-    }
+
     @include for-phone-only {
       width: $col_width * 6;
       padding: 0 $unit * 3;
@@ -1533,10 +1651,13 @@ section.footer {
   .credit {
     float:right;
     width: $col_width * 2;
+    position:sticky;
+    top:20px;
     @include for-phone-only {
       float:left;
       width: $col_width * 6;
       border-top: 1px solid;
+      position:relative;
     }
     .google {
       float: left;
@@ -1585,7 +1706,8 @@ section.footer {
       }
       @include for-phone-only {
         width: $col_width * 6;
-        padding: $col_width $unit * 3 0;
+        padding: 5vw 24px 0;
+        padding-bottom: 40px;
       }
     }
   }
