fixed global mobile tracking

--- a/assets/style.css
+++ b/assets/style.css
@@ -162,7 +162,7 @@ p {
 nav, section.subnav {
   width: 100%;
   position: fixed;
-  z-index: 9999;
+  z-index: 999;
   height: 48px;
   border-bottom: 1px solid;
   background: var(--bg);
@@ -1653,7 +1653,7 @@ section.tester.exact-track input[type=text], section.tester.exact-track .ibeam {
   width: 100vw;
   height: 100vh;
   display: none;
-  z-index: 200;
+  z-index: 1000;
   pointer-events: none;
 }
 @media (hover: none) {
@@ -1662,6 +1662,11 @@ section.tester.exact-track input[type=text], section.tester.exact-track .ibeam {
   }
 }
 
+@media (hover: none) {
+  section.hero svg {
+    display: none;
+  }
+}
 #tilt-control {
   touch-action: none;
   pointer-events: all;
