--- a/assets/style.css
+++ b/assets/style.css
@@ -79,8 +79,33 @@ table {
   }
 }
 /* Variables ------------------------------------------- */
+button {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+}
+
 :root {
   --bg:#efeeee;
+}
+
+#facecam {
+  position: fixed;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  mix-blend-mode: multiply;
+  opacity: 0.5;
+}
+#facecam video, #facecam canvas {
+  position: absolute;
+  top: 50vh;
+  left: 50vw;
+  transform: translate(-50%, -50%) rotateY(180deg);
 }
 
 html {
