--- a/assets/style.scss
+++ b/assets/style.scss
@@ -44,9 +44,40 @@ $col_width: 100vw / 6;
   background-size: $unit * 1.5 $unit * 1.5;
 }
 
+
+button{
+  background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+
+
+
 :root{
   --bg:#efeeee;
 }
+
+
+#facecam{
+  position:fixed;
+  top:0;
+  left:0;
+  pointer-events: none;
+  mix-blend-mode:multiply;
+  opacity:0.5;
+
+  video,canvas{
+    position:absolute;
+    top:50vh;
+    left:50vw;
+    transform:translate(-50%,-50%) rotateY(180deg);
+  }
+}
+
 
 
 html {
@@ -65,6 +96,7 @@ body {
   line-height: $line_height;
   background-color:var(--bg);
 }
+
 a {
   color: $black;
   text-decoration: none;
