--- a/assets/style.scss
+++ b/assets/style.scss
@@ -1634,6 +1634,29 @@ section.tester.exact-track{
 }
 
 
+#control-svg-wrapper{
+  z-index:1000;
+  pointer-events: none;
+  position:fixed;
+  top:0;
+  left:0;
+  width:100vw;
+  height:100vh;
+  mix-blend-mode: overlay;
+  svg{
+    line{
+      stroke-linecap:round;
+      stroke:white;
+      stroke-width:3px;
+    }
+
+    circle{
+      fill:white;
+    }
+  }
+}
+
+
 @media(hover:none){
   section.hero svg{
     display:none;
@@ -1650,11 +1673,14 @@ section.tester.exact-track{
   width:48px;
   height:48px;
   border-radius:50%;
-  background-color: white;
-  border:1px solid black;
-  box-shadow: 5px 5px 14px 0px rgba(0, 0, 0, 0.47);
+  background-color:white;
+  // border:1px solid black;
+  // box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.3);
 
 }
+
+
+
 
 
 
