--- a/assets/style.scss
+++ b/assets/style.scss
@@ -58,23 +58,51 @@ button{
 
 
 :root{
-  --bg:#efeeee;
+  --bg:white;
 }
 
 
 #facecam{
-  position:fixed;
+  position:absolute;
   top:0;
   left:0;
   pointer-events: none;
-  mix-blend-mode:multiply;
-  opacity:0.5;
+  width:100%;
+  height:100%;
+
+  svg{
+    opacity:0;
+    position:absolute;
+    transform:scaleX(-1) translateY(-65%);
+    top:50%;
+    left:0;
+
+    polyline{
+      stroke:black;
+      fill:none;
+    }
+  }
+
+  video{
+    opacity:0;
+  }
+
+  canvas{
+    width:100%;
+  }
+
+  // canvas{
+  //   width:100%;
+  //   // transform:translateY(-50%) scaleX(-1);
+  // }
 
   video,canvas{
+    // width:100%;
+    // transform:translateY(-25%) scaleX(-1);
+    transform:translate(-50%,-60%) scaleX(-1);
     position:absolute;
-    top:50vh;
-    left:50vw;
-    transform:translate(-50%,-50%) rotateY(180deg);
+    top:50%;
+    left:50%;
   }
 }
 
@@ -82,6 +110,7 @@ button{
 
 html {
   scroll-behavior: smooth;
+  scroll-padding-top:48px;
 }
 
 /* Typographic defaults -------------------------------- */
@@ -95,6 +124,7 @@ body {
   font-size: $font_body;
   line-height: $line_height;
   background-color:var(--bg);
+
 }
 
 a {
@@ -244,6 +274,7 @@ section.subnav {
   }
 }
 section.hero {
+  position:relative;
   padding-top: $unit * 6;
   text-align: center;
   font-size: 45vw;
@@ -272,7 +303,7 @@ section.hero {
       display:block;
     }
 
-    svg{
+    >svg{
       display:none;
     }
   }
@@ -337,18 +368,21 @@ section.hero {
     left: 200px;
   }
 
-  svg {
+  >svg {
     position:absolute;
     top:0;
     left:0;
     pointer-events:none;
+    opacity:0;
   }
   svg line {
-    stroke:#fff;
+    stroke:black;
     stroke-width:1;
   }
   svg circle {
     fill: #fff;
+    stroke:black;
+    stroke-width:1;
   }
 
 
@@ -397,6 +431,11 @@ section.hero {
   // }
 }
 
+
+section.hero:hover svg{
+  opacity:1;
+}
+
 section.scroller {
   cursor:crosshair;
   --scroll:0;
@@ -404,9 +443,21 @@ section.scroller {
   font-size: $unit * 27;
   line-height: $unit * 30;
   overflow-y: hidden;
+  overflow-x:scroll;
   white-space: nowrap;
   padding: 0 $unit * 3;
+
+  font-variation-settings: "HROT" 0, "VROT" 0;
+
   @include for-phone-only {
+    span:last-of-type{
+      display:inline-block;
+    }
+    span:last-of-type::after{
+      margin-left:40px;
+      width:100px;
+      display:inline-block;
+    }
     font-size: $unit * 15;
     line-height: $unit * 16;
   }
@@ -993,7 +1044,7 @@ section.signs {
       }
       .arc-17 {
         left: -24.14px / $wrapperW * 100%; top: 34.44%;
-        transform: rotate(94.11deg);
+        transform: rotate(57.11deg);
       }
       .arc-18 {
         left: -44.46px / $wrapperW * 100%; top: 42.16%;
@@ -1640,7 +1691,7 @@ section.tester.exact-track{
     display:block;
   }
 
-
+  mix-blend-mode: multiply;
   z-index:1000;
   pointer-events: none;
   position:fixed;
@@ -1648,16 +1699,18 @@ section.tester.exact-track{
   left:0;
   width:100vw;
   height:100vh;
-  mix-blend-mode: overlay;
   svg{
     line{
       stroke-linecap:round;
-      stroke:white;
-      stroke-width:3px;
+      stroke:black;
+      stroke-width:1px;
     }
 
     circle{
+      display:none;
       fill:white;
+      stroke:black;
+      stroke:1px;
     }
   }
 }
@@ -1680,7 +1733,7 @@ section.tester.exact-track{
   height:48px;
   border-radius:50%;
   background-color:white;
-  // border:1px solid black;
+  border:1px solid black;
   // box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.3);
 
 }
