--- a/assets/style.scss
+++ b/assets/style.scss
@@ -450,6 +450,12 @@ section.scroller {
   font-variation-settings: "HROT" 0, "VROT" 0;
 
   @include for-phone-only {
+    span{
+      // line-height: 0;
+      display: inline-block;
+      // transition: font-variation-settings 0.3s;
+      // height:40px;
+    }
     span:last-of-type{
       display:inline-block;
     }
