transition letters in scroller

--- a/assets/style.css
+++ b/assets/style.css
@@ -436,6 +436,7 @@ section.scroller {
   }
   section.scroller span {
     display: inline-block;
+    transition: font-variation-settings 0.3s;
   }
   section.scroller span:last-of-type {
     display: inline-block;
