--- a/assets/style.scss
+++ b/assets/style.scss
@@ -453,7 +453,7 @@ section.scroller {
     span{
       // line-height: 0;
       display: inline-block;
-      // transition: font-variation-settings 0.3s;
+      transition: font-variation-settings 0.3s;
       // height:40px;
     }
     span:last-of-type{
