--- a/assets/style.scss
+++ b/assets/style.scss
@@ -1760,8 +1760,16 @@ section.tester.exact-track{
   border-radius:50%;
   background-color:white;
   border:1px solid black;
-  // box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.3);
+  opacity:0;
+  box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.3);
+  transition:opacity 0.3s;
 
+
+}
+
+#tilt-control.visible{
+  opacity:1;
+  box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.3);
 }
 
 
