face cam on/off

--- a/assets/style.css
+++ b/assets/style.css
@@ -284,6 +284,14 @@ nav .tertiary .camera, section.subnav .tertiary .camera {
   }
 }
 
+.camera.on {
+  background-color: red;
+  border-radius: 50%;
+  height: 24px;
+  line-height: 0;
+  color: white;
+}
+
 section {
   border-bottom: 1px solid;
   background: var(--bg);
@@ -411,6 +419,14 @@ section.hero svg circle {
   fill: #fff;
   stroke: black;
   stroke-width: 1;
+}
+
+section.hero.facecam #facecam svg {
+  opacity: 1;
+}
+
+section.hero.facecam #needle {
+  opacity: 0;
 }
 
 section.hero:hover svg {
