--- a/assets/style.css
+++ b/assets/style.css
@@ -1791,7 +1791,7 @@ section.tester.exact-track input[type=text], section.tester.exact-track .ibeam {
 }
 
 @media (hover: none) {
-  section.hero svg {
+  section.hero svg:not(#facecam svg) {
     display: none;
   }
 }
