--- a/assets/style.scss
+++ b/assets/style.scss
@@ -81,6 +81,11 @@ button{
       stroke:black;
       fill:none;
     }
+
+    circle{
+      stroke:black;
+      fill:white;
+    }
   }
 
   video{
