--- a/assets/style.css
+++ b/assets/style.css
@@ -336,10 +336,10 @@ section.hero {
 }
 @media (max-width: 599px) {
   section.hero {
-    height: min(150vw, 600px);
-    padding-top: calc(60px + 0.05em);
-    font-size: min(70vw, 300px);
-    line-height: 0.8em;
+    height: min(140vw, 600px);
+    padding-top: calc(40px + 0.05em);
+    font-size: min(74vw, 300px);
+    line-height: 0.77em;
   }
   section.hero .chars {
     display: inline-block;
@@ -448,11 +448,6 @@ section.scroller {
   white-space: nowrap;
   padding: 0 24px;
   font-variation-settings: "HROT" 0, "VROT" 0;
-}
-@media (hover: none) {
-  section.scroller span {
-    transition: font-variation-settings 0.3s;
-  }
 }
 @media (max-width: 599px) {
   section.scroller {
@@ -1803,22 +1798,92 @@ section.tester.exact-track input[type=text], section.tester.exact-track .ibeam {
   touch-action: none;
   pointer-events: all;
   position: absolute;
-  top: 50%;
-  left: 50%;
+  --pupilx:50%;
+  --pupily:50%;
+  top: 120%;
+  left: 120%;
   transform: translate(-50%, -50%);
+  height: 48px;
+  width: 98px;
+  display: flex;
+  flex-flow: row nowrap;
+  --lid:24px;
+}
+#tilt-control .eye {
+  position: relative;
+  border: 2px solid black;
+  background-color: white;
   width: 48px;
+  min-width: 48px;
   height: 48px;
   border-radius: 50%;
+  overflow: hidden;
+  margin-right: 2px;
+  box-sizing: border-box;
+}
+#tilt-control .eye .pupil {
+  position: absolute;
+  top: 50%;
+  left: var(--pupilx);
+  top: var(--pupily);
+  width: 22px;
+  height: 22px;
+  border-radius: 50%;
+  background-color: black;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+}
+#tilt-control .eye .eyelid {
   background-color: white;
-  border: 1px solid black;
-  opacity: 0;
-  box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.3);
-  transition: opacity 0.3s;
+  width: 100%;
+  height: 50%;
+  position: absolute;
+  left: 0;
+  z-index: 2;
+}
+#tilt-control .eye .eyelid.top {
+  top: 0;
+  border-bottom: 2px solid black;
+  transform: translateY(-24px);
+}
+#tilt-control .eye .eyelid.bottom {
+  top: 20px;
+  transform: translateY(24px);
+  height: 26px;
+  border-top: 2px solid black;
 }
 
+#tilt-control.blink .eyelid.top {
+  animation: 0.5s forwards blinkdown ease;
+}
+#tilt-control.blink .eyelid.bottom {
+  animation: 0.5s forwards blinkup ease;
+}
+
+@keyframes blinkdown {
+  0% {
+    transform: translateY(-24px);
+  }
+  50% {
+    transform: translateY(0px);
+  }
+  100% {
+    transform: translateY(-24px);
+  }
+}
+@keyframes blinkup {
+  0% {
+    transform: translateY(24px);
+  }
+  50% {
+    transform: translateY(0px);
+  }
+  100% {
+    transform: translateY(24px);
+  }
+}
 #tilt-control.visible {
   opacity: 1;
-  box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.3);
 }
 
 h2.big {
