--- a/assets/style.css
+++ b/assets/style.css
@@ -1823,6 +1823,9 @@ section.tester.exact-track input[type=text], section.tester.exact-track .ibeam {
   section.hero svg:not(#facecam svg) {
     display: none;
   }
+  .scroller {
+    display: none;
+  }
 }
 #tilt-control {
   touch-action: none;
@@ -1840,10 +1843,11 @@ section.tester.exact-track input[type=text], section.tester.exact-track .ibeam {
   display: flex;
   flex-flow: row nowrap;
   --lid:24px;
+  filter: drop-shadow(rgba(0, 0, 0, 0.3) 46px 76px 9px);
 }
 #tilt-control .eye {
   position: relative;
-  border: 2px solid black;
+  border: 1px solid black;
   background-color: white;
   width: 48px;
   min-width: 48px;
@@ -1876,14 +1880,14 @@ section.tester.exact-track input[type=text], section.tester.exact-track .ibeam {
 }
 #tilt-control .eye .eyelid.top {
   top: 0;
-  border-bottom: 2px solid black;
+  border-bottom: 1px solid black;
   transform: translateY(-24px);
 }
 #tilt-control .eye .eyelid.bottom {
-  top: 20px;
+  top: 22px;
   transform: translateY(24px);
   height: 26px;
-  border-top: 2px solid black;
+  border-top: 1px solid black;
 }
 
 #tilt-control.blink .eyelid.top {
@@ -1909,7 +1913,7 @@ section.tester.exact-track input[type=text], section.tester.exact-track .ibeam {
     transform: translateY(24px);
   }
   50% {
-    transform: translateY(0px);
+    transform: translateY(-2px);
   }
   100% {
     transform: translateY(24px);
