--- a/assets/style.scss
+++ b/assets/style.scss
@@ -1813,6 +1813,10 @@ section.tester.exact-track{
   section.hero svg:not(#facecam svg){
     display:none;
   }
+
+  .scroller{
+    display:none;
+  }
 }
 
 #tilt-control{
@@ -1839,12 +1843,12 @@ section.tester.exact-track{
   flex-flow:row nowrap;
 
   --lid:24px;
-
+  filter: drop-shadow(rgba(0, 0, 0, 0.3) 46px 76px 9px);
   // animation: blink 1s forward infinite;
 
   .eye{
     position:relative;
-    border:2px solid black;
+    border:1px solid black;
     background-color: white;
     width:48px;
     min-width:48px;
@@ -1879,15 +1883,15 @@ section.tester.exact-track{
     }
     .eyelid.top{
       top:0;
-      border-bottom:2px solid black;
+      border-bottom:1px solid black;
       transform:translateY(-24px);
 
     }
     .eyelid.bottom{
-      top:20px;
+      top:22px;
       transform:translateY(24px);
       height:26px;
-      border-top:2px solid black;
+      border-top:1px solid black;
     }
   }
 
@@ -1920,7 +1924,7 @@ section.tester.exact-track{
     transform:translateY(24px);
   }
   50% {
-    transform:translateY(0px);
+    transform:translateY(-2px);
   }
   100%{
     transform:translateY(24px);
