--- a/assets/style.css
+++ b/assets/style.css
@@ -182,7 +182,7 @@ h2 {
 }
 
 h1, h2:not(.big) {
-  letter-spacing: 0.25em;
+  letter-spacing: 0.125em;
 }
 
 p {
@@ -311,17 +311,6 @@ nav .tertiary .camera, section.subnav .tertiary .camera {
   animation: 1s flashing forwards infinite;
 }
 
-@keyframes flashing {
-  0% {
-    background-color: rgba(255, 0, 0, 0.2);
-  }
-  50% {
-    background-color: rgb(255, 0, 0);
-  }
-  100% {
-    background-color: rgba(255, 0, 0, 0.2);
-  }
-}
 section {
   border-bottom: 1px solid;
   background: var(--bg);
@@ -751,7 +740,7 @@ section.signs .prosperity .inner .xs .line {
     width: 100vw;
     height: 50vw;
     border-right: none;
-    border-right: none;
+    border-bottom: none;
   }
   section.signs .prosperity .inner {
     transform-origin: 0 0;
