--- a/assets/style.scss
+++ b/assets/style.scss
@@ -170,7 +170,7 @@ h2 {
 }
 
 h1,h2:not(.big){
-  letter-spacing:0.25em;
+  letter-spacing:0.125em;
 }
 p {
   margin: $line_height 0;
@@ -288,22 +288,22 @@ nav, section.subnav {
   animation: 1s flashing forwards infinite;
 }
 
-@keyframes flashing {
-  0%{
-    // color: black;
-    background-color:rgba(255, 0, 0,0.2);
-  }
-
-  50%{
-    // color:white;
-    background-color: rgba(255, 0, 0,1);
-  }
-
-  100%{
-    // color:black;
-    background-color: rgba(255, 0, 0,0.2);
-  }
-}
+// @keyframes flashing {
+//   0%{
+//     // color: black;
+//     background-color:rgba(255, 0, 0,0.2);
+//   }
+//
+//   50%{
+//     // color:white;
+//     background-color: rgba(255, 0, 0,1);
+//   }
+//
+//   100%{
+//     // color:black;
+//     background-color: rgba(255, 0, 0,0.2);
+//   }
+// }
 
 
 
@@ -790,7 +790,7 @@ section.signs {
       width: $col_width * 6;
       height: $col_width * 3;
       border-right: none;
-      border-right: none;
+      border-bottom:none;
       .inner {
 
         transform-origin: 0 0;
